--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -6,8 +6,8 @@ draft: 'public'
 datePublished: '2024-03-03'
 # dateUpdated: '2024-03-03'
 description:
-  Анализ преимуществ информационных технологий на основе русского языка
-  для русскоязычных сообществ и людей мыслящих по-русски.
+  Анализ преимуществ информационных технологий на основе русского языка для
+  русскоязычных сообществ и людей мыслящих по-русски.
 # ogImage: static/front-end-doom.jpg
 categories:
   - analytics
@@ -57,9 +57,9 @@ categories:
 новыми идеями и подходами к решению задач.
 
 Многоязычие в ИТ особенно актуально в современном глобализированном мире, где
-технологии используются людьми из разных культур и с разными
-языками. Возможность использовать и понимать ИТ на разных языках может
-способствовать более широкому участию и инновациям.
+технологии используются людьми из разных культур и с разными языками.
+Возможность использовать и понимать ИТ на разных языках может способствовать
+более широкому участию и инновациям.
 
 Таким образом, существует объективная потребность в создании Русскоязычных
 Информационных Технологий - РИТ.
@@ -112,10 +112,10 @@ categories:
 информационными технологиями на любом уровне. Выбор изучаемого иностранного
 языка и глубины погружения в него должен быть индивидуальным и осознанным.
 
-Преимущество 2 важное и его русскоязычные специалисты часто
-недооценивают. Например, при преподавании языков программирования часто
-используются имена понятий и метапеременных [1], такие как _foo_, _bar_, _baz_
-[2]. Для англоязычного человека, это образные понятия, как по звучанию, так и по
+Преимущество 2 важное и его русскоязычные специалисты часто недооценивают.
+Например, при преподавании языков программирования часто используются имена
+понятий и метапеременных [1], такие как _foo_, _bar_, _baz_ [2]. Для
+англоязычного человека, это образные понятия, как по звучанию, так и по
 отражению в популярной культуре и литературе. Изначально эти слова были
 использованы как имена собственные в комиксе 1930-х годов «Смоки Стовер» Билла
 Холмана [3]. Это означает, что для англоязычного человека запомнить такие
@@ -140,11 +140,11 @@ Not Zero, что по русски означает Перейди если Не
 
 Существуют определённые стереотипы связанные с русским разумом. Например,
 русский разум более склонен к теории и глубоким логическим обоснованиям. Ему не
-достаточно эмпирических доказательств или работающих практических
-применений. Русский разум более "человеко-ориентированный". Он стремиться к
-справедливому обществу, открытости знаний и к единым общедоступным и эффективным
-стандартам. Также, русский разум более мобильный, открытый к новому и способен
-быстро адаптироваться в иностранных культурах.
+достаточно эмпирических доказательств или работающих практических применений.
+Русский разум более "человеко-ориентированный". Он стремиться к справедливому
+обществу, открытости знаний и к единым общедоступным и эффективным стандартам.
+Также, русский разум более мобильный, открытый к новому и способен быстро
+адаптироваться в иностранных культурах.
 
 Я не берусь оценивать насколько эти стереотипы соответствуют реальности. Но,
 если предположить их вероятность, то можно выделить следующие "спорные"
@@ -170,9 +170,9 @@ Not Zero, что по русски означает Перейди если Не
 являлись более всеобъемлющими и более востребованными в промышленности, чем
 множество схожих иностранных инициатив по стандартизации. Отчасти это можно
 объяснить плановой советской экономикой, когда у компаний не было побуждений
-внедрения своих стандартов для завоевания доминирующего положения на
-рынке. Единая система стандартов в разных условиях может быть как преимуществом,
-так и недостатком. В случае создания стандартной базы открытых программ - языков
+внедрения своих стандартов для завоевания доминирующего положения на рынке.
+Единая система стандартов в разных условиях может быть как преимуществом, так и
+недостатком. В случае создания стандартной базы открытых программ - языков
 программирования, инструментов разработки, библиотек алгоритмов и прикладных
 систем - склонность к русского разума к универсальной стандартизации может стать
 фундаментальным преимуществом РИТ.
@@ -188,6 +188,6 @@ Not Zero, что по русски означает Перейди если Не
 
 ### Список литературы
 
-2. [Метапеременная](https://ru.wikipedia.org/wiki/Метапеременная)
+1. [Метапеременная](https://ru.wikipedia.org/wiki/Метапеременная)
 2. [Foobar](https://en.wikipedia.org/wiki/Foobar)
 3. [Smokey Stover](https://en.wikipedia.org/wiki/Smokey_Stover)
