--- a/pages/index/2023-02-01.index.en.mdx
+++ b/pages/index/2023-02-01.index.en.mdx
@@ -4,22 +4,30 @@ dateUpdated: '2023-02-20'
 description: My home page
 ---
 
-# Greetings, stranger!
+# My Digital Frontier
 
-My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly developing
-embedded Linux software for distributed real time systems with automatic control
-and web user interfaces.
+My name is Victor Rybynok, a Senior Software Engineer specializing in the
+development of system software for Quantum Key Distribution (QKD) equipment.
+
+Join me as I explore the fascinating world of quantum technology, share insights
+from my professional journey, and discuss the latest advancements in QKD and
+cybersecurity.
+
+This site is a collection of blog posts and notes, and the place where I can
+keep my thoughts organised, searchable and shared with the rest of the
+world&nbsp;– my space in [noosphere](https://en.wikipedia.org/wiki/Noosphere).
+
+It also serves as a test platform for experimenting with web software
+development and deployment techniques, documenting the small discoveries I find
+interesting.
+
+{/*
+My name is Victor Rybynok, and I am a Senior Software Engineer specializing in
+the development of system software for Quantum Key Distribution (QKD) equipment.
+*/}
 
 {/*
 My current working programming languages are C++20, TypeScript, and Python. I am
 also interested in Rust, cppfront, Go, and Haskell. Throughout my career, I have
 used over two dozen general-purpose and domain-specific languages.
 */}
-
-This website site is a collection of blog posts and notes, and the place where I
-can keep my thoughts organised, searchable and shared with the rest of the
-world&nbsp;– my space in [noosphere](https://en.wikipedia.org/wiki/Noosphere).
-
-It is also a test platform where I can experiment with web software development
-and deployment techniques and document small discoveries that I find
-interesting.
