Updating home page

--- a/pages/index/2023-02-13.index.ru.mdx
+++ b/pages/index/2023-02-13.index.ru.mdx
@@ -1,19 +1,22 @@
 ---
 title: Главная | Виктор Рыбынок
-dateUpdated: '2023-02-20'
+dateUpdated: '2024-12-02'
 description: Моя домашняя страница
 ---
 
-# Мои приветствия, путник!
+# Мой цифровой путь
 
-Меня зовут Виктор Рыбынок. Я инженер-программист&nbsp;– в основном, занимаюсь
-разработкой встроенного программного обеспечения Linux для распределённых систем
-реального времени с автоматическим управлением и пользовательскими интерфейсами
-на основе веб.
+Меня зовут Виктор Рыбынок. Я старший инженер-программист, специализирующийся на
+разработке системного программного обеспечения для оборудования квантового
+распределения ключей (Quantum Key Cryptography, QKD).
+
+Присоединяйтесь к моему в увлекательному путешествию по миру квантовых
+технологий!  Здесь я делюсь опытом своей профессиональной деятельности и
+обсуждаю последние достижения в области QKD и кибербезопасности.
 
 Этот сайт представляет собой коллекцию блог-публикаций и заметок, а также место
 где я могу удерживать свои мысли в организованной форме, с возможностью поиска и
-открытыми остальному миру&nbsp;– моё пространство в
+открытыми остальному миру&nbsp;— моё пространство в
 [неосфере](https://ru.wikipedia.org/wiki/Ноосфера).
 
 Также, это тестовая платформа для экспериментов с методами разработки и
