--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -126,9 +126,44 @@ v.rybynok@gmail.com.
   <Image src="static/me-1-square.jpg" alt="Я, гребу" />
 </figure>
 
-В настоящий момент я живу в Кембридже и продолжаю работать в той же компании. За
-все годы работы мне представилось множество возможностей поработать с различными
-компьютерными системами, от маленьких 8-битных контроллеров до сложных сенсорных
-систем объединённых в сеть с синхронизацией в реальном времени. Теперь я могу с
-уверенностью сказать, что я "физик, который думает, что он программист", и на
-этот раз мои навыки в области физики нуждаются в улучшении!
+Один из основных продуктов, в разработке которого я принимал участие,&nbsp;– это
+газовый анализатор для двигателей внутреннего сгорания, который был признан
+самым быстрым и точным прибором на рынке. Его модульная конструкция позволяла
+проводить многомодальные измерения в цилиндре двигателя в реальном
+времени. Управляющее ПО, над которым я работал, было тесно интегрировано с
+датчиками анализатора и веб-интерфейсом. Оно было разработано для оптимизации
+гибкости настройки датчиков и обработки больших потоков данных, что выводило
+вычислительную платформу на предел её возможностей.
+
+Около 2019 года компания столкнулась с давлением со стороны государственной
+инициативы по переходу автомобильной промышленности с двигателей внутреннего
+сгорания на электрические транспортные средства. В результате компания потеряла
+многих своих традиционных клиентов и начала искать новые рынки, такие как
+мониторинг качества воздуха, калибровка и характеристика электрических
+автомобильных двигателей. Мой основной проект был завершен вскоре после выхода
+на рынок, около 2022 года.
+
+В период с 2021 по 2024 годы мои проекты стали более разнообразными, но менее
+интересными с точки зрения архитектуры и вычислительной сложности. В это время у
+меня была возможность изучить широкий спектр языков программирования и
+технологий, включая TypeScript, Node.js, React, Python с Typings, Go, C++20 и
+Rust. Я также работал с облачными платформами, контейнеризованными
+развертываниями и микросервисной архитектурой — включая самохостинг и
+встраиваемые решения.
+
+Хотя у меня была хорошая возможность учиться и делать свой вклад в более
+маленькие, но значимые для компании проекты, я все больше ощущал, что настало
+время искать новые перспективы, которые с одной стороны создадут большие вызовы,
+а с другой стороны будут способствовать профессиональному росту и мотивировать
+поиск инноваций в области разработки программного обеспечения.
+
+В 2024 году я устроился на работу в более крупную компанию в Кембридже, которая
+специализируется на продуктах для квантового распределения ключей (Quantum Key
+Cryptography, QKD). Хотя изначально я подавал заявку на роль фронтенд-инженера,
+меня быстро перевели на встраиваемые системы и программирование Linux в роли
+старшего инженера-программиста. Это начало нового увлекательного пути, на
+котором мои образование и опыт в области программного обеспечения, физики и
+исследований могут соединиться воедино и помочь внести значимый вклад в развитие
+общества. В настоящее время я стараюсь фокусироваться на улучшении своих навыков
+системного программирования и углубленном изучении QKD и кибербезопасности,
+стремясь научиться и понять как можно больше.
