--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -135,9 +135,9 @@ One of the major products I contributed to was a gas analyzer for combustion
 engines, renowned as the fastest and most accurate instrument on the market. Its
 modular design enabled multi-modal in-cylinder measurements in real time. The
 control software I worked on was tightly integrated with the analyzer's sensors
-and a web-based user interface. It was designed to optimize sensor
-configuration flexibility and handle high data throughput, pushing the compute
-platform to the limits of its capabilities.
+and a web-based user interface. It was designed to fine-tune sensor
+configuration and handle high data throughput, pushing the compute platform to
+the limits of its capabilities.
 
 Around 2019, the company faced pressure from a government initiative to
 transition the automotive industry from combustion engines to electric
@@ -150,13 +150,13 @@ Between 2021 and 2024, my projects became more diverse, though less challenging
 in terms of architecture and computational complexity. During this time, I had
 the opportunity to explore a wide range of programming languages and software
 technologies, including TypeScript, Node.js, React, Python with Typings, Go,
-C++20, and Rust. I also worked with cloud platforms, containerized deployments,
+C++20, and Rust. I also worked with cloud platforms, containerized deployment,
 and microservice architectures&nbsp;– including self-hosted and embedded.
 
 While I appreciated the opportunity to learn and contribute to several smaller
-yet significant projects, I increasingly felt it was time to seek new
-opportunities that would offer greater challenges, foster professional growth,
-and drive innovation in software development.
+yet significant projects, I felt it was time to seek new opportunities that
+would offer greater challenges, foster professional growth, and drive innovation
+in software development.
 
 In 2024, I joined a larger company in Cambridge specializing in Quantum Key
 Distribution (QKD) products. Although I initially applied for a frontend
@@ -164,5 +164,4 @@ engineering role, I was soon transitioned to embedded systems and Linux
 programming as a Senior Software Engineer. This marks the beginning of an
 exciting new journey, where my education and experience in software, physics,
 and research can contribute meaningfully. Currently, my focus is on sharpening
-my systems programming skills and delving into QKD and cybersecurity, striving
-to learn and understand as much as possible.
+my systems programming skills and exploring QKD and cybersecurity.
