--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -151,17 +151,21 @@ in terms of architecture and computational complexity. During this time, I had
 the opportunity to explore a wide range of programming languages and software
 technologies, including TypeScript, Node.js, React, Python with Typings, Go,
 C++20, and Rust. I also worked with cloud platforms, containerized deployment,
-and microservice architectures&nbsp;– including self-hosted and embedded.
+and microservice architectures&nbsp;– including self-hosted and embedded
+systems.
 
 While I appreciated the opportunity to learn and contribute to several smaller
-yet significant projects, I felt it was time to seek new opportunities that
-would offer greater challenges, foster professional growth, and drive innovation
-in software development.
+yet significant for the company projects, I felt it was time to seek new
+opportunities that would offer greater challenges, foster professional growth,
+and drive innovation in software development.
 
 In 2024, I joined a larger company in Cambridge specializing in Quantum Key
 Distribution (QKD) products. Although I initially applied for a frontend
 engineering role, I was soon transitioned to embedded systems and Linux
-programming as a Senior Software Engineer. This marks the beginning of an
-exciting new journey, where my education and experience in software, physics,
-and research can contribute meaningfully. Currently, my focus is on sharpening
-my systems programming skills and exploring QKD and cybersecurity.
+programming as a Senior Software Engineer.
+
+This marks the beginning of a new path where my education and experience in
+software, physics, and research should come together to make a meaningful
+contribution to the development of technology and society. Currently, my focus
+is on sharpening my systems programming skills and exploring quantum technology,
+QKD and cybersecurity.
