--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -153,17 +153,19 @@ Rust. Я также работал с облачными платформами,
 
 Хотя мне была предоставлена возможность учиться и развивать небольшие, но
 значимые для компании проекты, я ощущал, что пришло время искать новые
-перспективы, которые с одной стороны могут создать некоторые сложности, а с
-другой стороны будут способствовать моему профессиональному росту и мотивировать
-к поиску инноваций в области разработки программного обеспечения.
+перспективы, которые с одной стороны могут создать некоторые бытовые неудобства,
+а с другой стороны будут способствовать моему профессиональному росту и
+мотивировать к поиску инноваций в области разработки программного обеспечения.
 
-В 2024 году я устроился на работу в более крупную компанию в Кембридже, которая
+В 2024 году я перешёл на работу в более крупную компанию в Кембридже, которая
 специализируется на продуктах для квантового распределения ключей (Quantum Key
-Cryptography, QKD). Изначально я подавал заявку на роль фронтенд-инженера, но
-меня быстро перевели на разработку встраиваемых систем и программирование Linux
-в роли старшего инженера-программиста. Новая работа должна положить начало
-нового пути, на котором мои образование и опыт в области программного
-обеспечения, физики и исследований могут соединиться воедино и помочь сделать
-значимый вклад в развитие технологии и общества. В настоящее время я стараюсь
-фокусироваться на улучшении своих навыков системного программирования и
-углубленном изучении QKD и кибербезопасности.
+Distribution, QKD). Изначально я подавал заявку на роль фронтенд-инженера, но
+меня скоро перевели на разработку встраиваемых систем и программирование Linux в
+роли старшего инженера-программиста.
+
+Новая роль должна положить начало следующему этапу в моей карьере, на котором
+мои образование и опыт в области программного обеспечения, физики и исследований
+могут соединиться воедино и помочь сделать значимый вклад в развитие общества. В
+настоящее время я стараюсь сфокусироваться на улучшении своих навыков системного
+программирования и углубленном изучении квантовых технологий, квантового
+распределения ключей и кибербезопасности.
