--- a/pages/index/2023-02-13.index.ru.mdx
+++ b/pages/index/2023-02-13.index.ru.mdx
@@ -8,7 +8,7 @@ description: Моя домашняя страница
 
 Меня зовут Виктор Рыбынок. Я старший инженер-программист, специализирующийся на
 разработке системного программного обеспечения для оборудования квантового
-распределения ключей (Quantum Key Cryptography, QKD).
+распределения ключей (Quantum Key Distribution, QKD).
 
 Присоединяйтесь к моему в увлекательному путешествию по миру квантовых
 технологий!  Здесь я делюсь опытом своей профессиональной деятельности и
