--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -164,8 +164,8 @@ Distribution (QKD) products. Although I initially applied for a frontend
 engineering role, I was soon transitioned to embedded systems and Linux
 programming as a Senior Software Engineer.
 
-This marks the beginning of a new path where my education and experience in
-software, physics, and research should come together to make a meaningful
-contribution to the development of technology and society. Currently, my focus
-is on sharpening my systems programming skills and exploring quantum technology,
-QKD and cybersecurity.
+This role marks the beginning of a new chapter in my career, where my education
+and experience in software, physics, and research converge to make a meaningful
+contribution to societal development. Currently, my focus is on sharpening my
+systems programming skills and exploring quantum technologies, QKD and
+cybersecurity.
