Migrating to tailwind 4

--- a/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
+++ b/pages/blog/dynamic-dns/2023-09-19.index.en.mdx
@@ -65,7 +65,7 @@ configuration page:
   <Image
     src="static/talktalk-router.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -103,7 +103,7 @@ sequence of configuration screens:
   <Image
     src="static/ddclient-config-1-provider.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -115,7 +115,7 @@ sequence of configuration screens:
   <Image
     src="static/ddclient-config-2-3-password.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -127,7 +127,7 @@ sequence of configuration screens:
   <Image
     src="static/ddclient-config-4-ip-method-desc.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -139,7 +139,7 @@ sequence of configuration screens:
   <Image
     src="static/ddclient-config-5-ip-method-select.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -151,7 +151,7 @@ sequence of configuration screens:
   <Image
     src="static/ddclient-config-6-host-names.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
