--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -120,7 +120,7 @@ Windows 10 and Windows 11 recognise such USB configuration as COM port:
   <Image
     src="static/windows-device-manager-com.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -197,7 +197,7 @@ and on Windows:
   <Image
     src="static/windows-correct-config.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
