--- a/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
+++ b/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
@@ -25,7 +25,7 @@ $ i2cdetect -y 1
   <Image
     src="static/modprobe-correct-68-output.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -57,7 +57,7 @@ and display `UU` instead of RTC Clock:
   <Image
     src="static/modprobe-correct-uu-output.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
