--- a/pages/notes/linux-samba/2023-04-25.index.en.mdx
+++ b/pages/notes/linux-samba/2023-04-25.index.en.mdx
@@ -66,7 +66,7 @@ mDNS-resolved name):
   <Image
     src="static/network-folder-mdns-name.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
@@ -81,7 +81,7 @@ message:
   <Image
     src="static/open-folder-mdns-error.png"
     alt=""
-    className="!rounded-none"
+    className="rounded-none!"
     priority
   />
   <figcaption>
