--- a/pages/index/2023-02-01.index.en.mdx
+++ b/pages/index/2023-02-01.index.en.mdx
@@ -6,12 +6,14 @@ description: My home page
 
 # My Digital Frontier
 
-My name is Victor Rybynok, a Senior Software Engineer specializing in the
-development of system software for Quantum Key Distribution (QKD) equipment.
+My name is Victor Rybynok, a Senior Software Engineer working on software for
+Quantum Key Distribution (QKD) systems.
 
+{/*
 Join me as I explore the fascinating world of quantum technology, share insights
 from my professional journey, and discuss the latest advancements in QKD and
 cybersecurity.
+*/}
 
 This site is a collection of blog posts and notes, and the place where I can
 keep my thoughts organised, searchable and shared with the rest of the
