--- a/pages/index/2023-02-13.index.ru.mdx
+++ b/pages/index/2023-02-13.index.ru.mdx
@@ -1,18 +1,20 @@
 ---
 title: Главная | Виктор Рыбынок
-dateUpdated: '2024-12-02'
+dateUpdated: '2025-02-14'
 description: Моя домашняя страница
 ---
 
 # Мой цифровой путь
 
-Меня зовут Виктор Рыбынок. Я старший инженер-программист, специализирующийся на
-разработке системного программного обеспечения для оборудования квантового
-распределения ключей (Quantum Key Distribution, QKD).
+Меня зовут Виктор Рыбынок. Я старший инженер-программист, занимаюсь разработкой
+программного обеспечения для систем квантового распределения ключей (Quantum Key
+Distribution, QKD).
 
+{/*
 Присоединяйтесь к моему в увлекательному путешествию по миру квантовых
 технологий!  Здесь я делюсь опытом своей профессиональной деятельности и
 обсуждаю последние достижения в области QKD и кибербезопасности.
+*/}
 
 Этот сайт представляет собой коллекцию блог-публикаций и заметок, а также место
 где я могу удерживать свои мысли в организованной форме, с возможностью поиска и
