--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -1,5 +1,5 @@
 ---
-title: Информационные Технологии на Основе Русского Языка
+title: Информа­ционные Технологии на Основе Русского Языка
 authors:
   - Виктор Рыбынок
 draft: 'public'
